[project]
name = "timeseries-adversarial-attacks-and-robustness"
version = "0.1.0"
description = "Course project on adversarial attacks and robustness analysis for time-series forecasting, including LSTM/BiLSTM baselines, FGSM/BIM attacks, and key time-step attack experiments."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=2.4.3",
    "pandas<3.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "tensorflow>=2.21.0",
]
